--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 management.endpoints.web.exposure.include=*
+spring.security.user.name=user
+spring.security.user.password=user
