--- a/restful-web-services/src/main/resources/application.properties
+++ b/restful-web-services/src/main/resources/application.properties
@@ -2,5 +2,13 @@
 spring.jackson.serialization.write-dates-as-timestamps=false
 
 management.endpoints.web.exposure.include=*
+# Spring Security
 spring.security.user.name=user
 spring.security.user.password=user
+
+# H2
+spring.jpa.show-sql=true
+spring.datasource.url=jdbc:h2:mem:testdb;NON_KEYWORDS=USER
+spring.h2.console.enabled=true
+spring.jpa.defer-datasource-initialization=true
+spring.data.jpa.repositories.bootstrap-mode=default
